@@ -17,7 +17,7 @@
 
 package leetcode.editor.cn;
 
-import java.util.LinkedList;
+import java.util.ArrayList;
 import java.util.List;
 
 //Java：组合
@@ -25,51 +25,39 @@ public class P77Combinations {
     public static void main(String[] args) {
         Solution solution = new P77Combinations().new Solution();
         // TO TEST
-        List<List<Integer>> res = solution.combine(4, 2);
-        for (int i = 0; i < res.size(); i++) {
-            PrintUtil.print(res.get(i).size());
-            for (int j = i; j < res.get(i).size(); j++) {
-                PrintUtil.print(res.get(i).get(j));
-            }
-        }
     }
 
     //leetcode submit region begin(Prohibit modification and deletion)
     class Solution {
-        private List<List<Integer>> res = new LinkedList<>();
-        int n, k;
+        private List<List<Integer>> res = new ArrayList<>();
+        private int n;
+        private int k;
 
+        //一次性做对，比第一次好
         public List<List<Integer>> combine(int n, int k) {
+            if (n < 1 || k < 1) {
+                return res;
+            }
             this.n = n;
             this.k = k;
-            //先选1, 保存的路径上来是空的
-            backtrack(1, new LinkedList<>());
+            dfs(new ArrayList<>(), 1);
             return res;
         }
 
-        /**
-         * @param first 要选择的列表
-         * @param cur   要保存的路径
-         */
-        private void backtrack(int first, LinkedList<Integer> cur) {
-            //触发结束条件:当保存的路径的长度，等于限制的长度：k个数的组合的时候，这个就满足了，
-            //就把结果存放起来
+        private void dfs(List<Integer> cur, int start) {
             if (cur.size() == k) {
-                //todo 这里不明白，为什么不是res.add(cur)
-                //貌似是copy的原因
-                res.add(new LinkedList(cur));
+                res.add(new ArrayList<>(cur));
                 return;
             }
 
-            //做选择
-            for (int i = first; i < n + 1; i++) {
-                //做选择，记录路径
-                cur.add(i);
-                //下钻
-                backtrack(i + 1, cur);
-                //撤销选择,把最后添加的干掉
-                cur.removeLast();
+            for (int i = start; i <= n; i++) {
+                if (!cur.contains(i)) {
+                    cur.add(i);
+                }
+                dfs(cur, i + 1);
+                cur.remove(cur.size() - 1);
             }
+
         }
     }
 //leetcode submit region end(Prohibit modification and deletion)
